# monte-carlo-option-pricer

./: LICENSE  README.md  pyproject.toml
src/mc_pricer/: black_scholes.py  mc.py  stats.py
tests/: test_bs.py  test_mc_vs_bs.py
