[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mc-pricer"
version = "0.1.0"
description = "Monte Carlo option pricer with validation against Black–Scholes"
authors = [{ name = "Nils Olsson" }]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
]

[project.scripts]
mcprice = "mc_pricer.cli:main"
